# memsrv

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Milestones.md  README.md  pyproject.toml
.github/workflows/: linter.yml
docs/: Milestones.md  Setup.md  Telemetry.md
examples/: app.py  app_langchain.py  env.example
examples/adk_agent/: agent.py  custom_memory_tool.py  memory_client.py  memory_test.py  response_manager.py
examples/agents/adk/: README.md  agent.py  custom_memory_tool.py  response_manager.py
examples/agents/langchain/: README.md  agent.py  custom_memory_tool.py  prompt.py  response_manager.py  utils.py
examples/langchain_agent/: agent.py  custom_memory_tool.py  prompt.py  response_manager.py  tools.py  utils.py
examples/shared/: base_memory_client.py  memory_client.py  utils.py
examples/ui/: streamlit_adk.py  streamlit_langchain.py
src/: app.py  config.py  env.example  events.json  memory_utils.py  server.py
src/memsrv/api/: main.py
src/memsrv/api/routes/: memory.py
src/memsrv/core/: consolidator.py  extractor.py  memory_service.py  prompts.py  service.py
src/memsrv/db/: base_adapter.py  interface.py  utils.py
src/memsrv/db/adapters/: chroma.py  chroma_lite.py  postgres.py
src/memsrv/embeddings/: base_config.py  base_embedder.py
src/memsrv/llms/: base_config.py  base_llm.py  gemini.py
src/memsrv/models/: memory.py  request.py  response.py
src/memsrv/telemetry/: __init__.py  constants.py  helpers.py  setup.py  tracing.py
src/memsrv/utils/: exceptions.py  factory.py  logger.py  retry.py
src/simple_agent/: __init__.py  agent.py  memory_test.py  response_manager.py  tools.py
(+2 files in other folders)
