[project]
name = "memsrv"
version = "0.1.0"
description = "A simple, self-hosted memory service boilerplate for LLMs and agent frameworks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.17",
    "google-adk>=1.11.0",
    "pg8000>=1.31.4",
    "streamlit>=1.48.1",
]
