[project]
name = "memsrv"
version = "0.1.0"
description = "A simple, self-hosted memory service boilerplate for LLMs and agent frameworks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "chromadb>=1.1.0",
    "fastapi>=0.116.2",
    "google-genai>=1.38.0",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
examples-adk = [
    "google-adk>=1.14.1",
    "streamlit>=1.49.1",
]
